{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 26,
  "lineage": "6dc4450b-26c2-e7f7-0fe9-01bbed5e9e50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "r_innovation_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476498784073:loadbalancer/app/development-express-alb/b74f8b76803197a4",
            "arn_suffix": "app/development-express-alb/b74f8b76803197a4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "development-express-alb-1244233391.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:476498784073:loadbalancer/app/development-express-alb/b74f8b76803197a4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "development-express-alb",
            "security_groups": [
              "sg-0ca325b81e74c3c24"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d73ca773e32dcad"
              },
              {
                "subnet_id": "subnet-0931a97ee59316948"
              },
              {
                "subnet_id": "subnet-0c855c5528a83a31e"
              }
            ],
            "subnets": [
              "subnet-06d73ca773e32dcad",
              "subnet-0931a97ee59316948",
              "subnet-0c855c5528a83a31e"
            ],
            "vpc_id": "vpc-0c355ddae6a5635b9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_alb_rinnovation_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rinnovation_default_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476498784073:listener/app/development-express-alb/b74f8b76803197a4/8261fad517c52110",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:476498784073:targetgroup/development-express-default/e7ef39bb1fc4e5ef",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:476498784073:listener/app/development-express-alb/b74f8b76803197a4/8261fad517c52110",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:476498784073:loadbalancer/app/development-express-alb/b74f8b76803197a4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.r_innovation_alb",
            "aws_lb_target_group.default_rinnovation",
            "aws_security_group.allow_alb_rinnovation_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default_rinnovation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:476498784073:targetgroup/development-express-default/e7ef39bb1fc4e5ef",
            "arn_suffix": "targetgroup/development-express-default/e7ef39bb1fc4e5ef",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:476498784073:targetgroup/development-express-default/e7ef39bb1fc4e5ef",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "development-express-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_alb_rinnovation_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:security-group/sg-0ca325b81e74c3c24",
            "description": "Allow HTTP and HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca325b81e74c3c24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "development-express-alb-sg",
            "name_prefix": "",
            "owner_id": "476498784073",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062012b46e53bf811",
            "domain": "vpc",
            "id": "eipalloc-062012b46e53bf811",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-130-125.compute-1.amazonaws.com",
            "public_ip": "23.21.130.125",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "development-express-vpc-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:internet-gateway/igw-04883efc81828d71b",
            "id": "igw-04883efc81828d71b",
            "owner_id": "476498784073",
            "tags": {
              "Name": "development-express-vpc",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062012b46e53bf811",
            "connectivity_type": "public",
            "id": "nat-00dfd0ce33e972550",
            "network_interface_id": "eni-0006a6dd9329509d4",
            "private_ip": "172.19.101.187",
            "public_ip": "23.21.130.125",
            "subnet_id": "subnet-0931a97ee59316948",
            "tags": {
              "Name": "development-express-vpc-us-east-1a",
              "Terraform": "true",
              "account-id": "476498784073",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-us-east-1a",
              "Terraform": "true",
              "account-id": "476498784073",
              "client": "express",
              "environment": "development"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04046f241ade383001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00dfd0ce33e972550",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04046f241ade38300",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04883efc81828d71b",
            "id": "r-rtb-0082b661a34141b051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0082b661a34141b05",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:route-table/rtb-04046f241ade38300",
            "id": "rtb-04046f241ade38300",
            "owner_id": "476498784073",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development-express-vpc-private",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-private",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:route-table/rtb-0082b661a34141b05",
            "id": "rtb-0082b661a34141b05",
            "owner_id": "476498784073",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "development-express-vpc-public",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-public",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001ff820e15bbc12c",
            "route_table_id": "rtb-04046f241ade38300",
            "subnet_id": "subnet-0ae8d28bb8f15c334"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06118bb77e42a3bd6",
            "route_table_id": "rtb-04046f241ade38300",
            "subnet_id": "subnet-047d53ded7c7e771c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0957f15ef8c9590e7",
            "route_table_id": "rtb-04046f241ade38300",
            "subnet_id": "subnet-0d4fa69364ddb4746"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004c261f6f3060e1d",
            "route_table_id": "rtb-0082b661a34141b05",
            "subnet_id": "subnet-0931a97ee59316948"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a2df8d31a977d5",
            "route_table_id": "rtb-0082b661a34141b05",
            "subnet_id": "subnet-06d73ca773e32dcad"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05472244011f7df11",
            "route_table_id": "rtb-0082b661a34141b05",
            "subnet_id": "subnet-0c855c5528a83a31e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-0ae8d28bb8f15c334",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae8d28bb8f15c334",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-private-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-private-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-047d53ded7c7e771c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047d53ded7c7e771c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-private-us-east-1b",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-private-us-east-1b",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-0d4fa69364ddb4746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4fa69364ddb4746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-private-us-east-1c",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-private-us-east-1c",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-0931a97ee59316948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.19.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0931a97ee59316948",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-public-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-public-us-east-1a",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-06d73ca773e32dcad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d73ca773e32dcad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-public-us-east-1b",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-public-us-east-1b",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:subnet/subnet-0c855c5528a83a31e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c855c5528a83a31e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "476498784073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "development-express-vpc-public-us-east-1c",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc-public-us-east-1c",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "vpc_id": "vpc-0c355ddae6a5635b9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:476498784073:vpc/vpc-0c355ddae6a5635b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-05ebd6de593a6a4dc",
            "default_route_table_id": "rtb-016ecfe82917fed3d",
            "default_security_group_id": "sg-0a278a03ce9793696",
            "dhcp_options_id": "dopt-07ff4d86fbcabc158",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c355ddae6a5635b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016ecfe82917fed3d",
            "owner_id": "476498784073",
            "tags": {
              "Name": "development-express-vpc",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            },
            "tags_all": {
              "Name": "development-express-vpc",
              "Terraform": "true",
              "account-id": " 476498784073 ",
              "client": "express",
              "environment": "development"
            }
          }
        }
      ]
    }
  ]
}